# gh-jobs-purge.rs

./: CHANGELOG.md  Cargo.toml  EXAMPLES.md  FEATURE_SUMMARY.md  README.md  TESTING.md  TEST_REFERENCE.md  TEST_SUMMARY.md  deny.toml
.github/workflows/: autofix.yaml  changelog.yaml  cross-build.yaml  dependency-review.yml  health.yaml  issues.yaml  licenses.yaml  lint.yaml  pr-labels.yaml  release-packaging.yaml  scorecard.yaml  security.yaml  test-with-coverage.yaml
src/: lib.rs  main.rs
tests/: integration_tests.rs
